--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="textExecution">O profissional está executando seu pedido</string>
     <string name="textCanceled">Seu pedido foi cancelado</string>
     <string name="textFinished">Seu pedido foi finalizado</string>
+
+    <string name="default_notification_channel_id">Motoflash Notifications</string>
 </resources>
